--- a/CETONI_Elements_Manual_DE/_static/css/style_override.css
+++ b/CETONI_Elements_Manual_DE/_static/css/style_override.css
@@ -82,18 +82,21 @@ h1, h2, .rst-content .toctree-wrapper p.caption, h3, h4, h5, h6, legend {
 .rst-content h1 {
   font-size: 39px;
   margin-bottom: 21px;
+  color: #04204c;
 }
 
 .rst-content h2 {
   font-size: 32px;
   margin-top: 2em;
   margin-bottom: 1em;
+  color: #04204c;
 }
 
 .rst-content h3 {
   font-size: 26px;
   margin-top: 2em;
   margin-bottom: 1em;
+  color: #04204c;
 }
 
 .rst-content h4 {
@@ -101,6 +104,7 @@ h1, h2, .rst-content .toctree-wrapper p.caption, h3, h4, h5, h6, legend {
   font-size: 19px;
   margin-top: 2em;
   margin-bottom: 1em;
+  color: #04204c;
 }
 
 .rst-content h5 {
@@ -108,6 +112,7 @@ h1, h2, .rst-content .toctree-wrapper p.caption, h3, h4, h5, h6, legend {
   font-size: 17px;
   margin-top: 2em;
   margin-bottom: 1em;
+  color: #04204c;
 }
 
 .rst-content h6 {
@@ -115,6 +120,7 @@ h1, h2, .rst-content .toctree-wrapper p.caption, h3, h4, h5, h6, legend {
   font-size: 15px;
   margin-top: 2em;
   margin-bottom: 1em;
+  color: #04204c;
 }
 
 .rst-content li {
@@ -137,12 +143,12 @@ body > div.wy-grid-for-nav > nav > div > div.wy-menu.wy-menu-vertical > p > span
     background-color: #233942 !important;
 }
 
-/*
+
 .wy-nav-top {
-    background-color: #ffffff !important;
-    border-bottom: 4px solid red;
+    background-color: #04204c;
+    /*border-bottom: 4px solid red;*/
   }
-*/
+
 
 .wy-nav-top a {
   /*color: #000;*/
@@ -222,12 +228,10 @@ html[data-theme='dark'] .rst-content .kbd {
 }
 
 .step {
-
   font-family: 'kievit-bold';
   font-size: 19px;
   margin-top: 2em;
   margin-bottom: 1em;
-
 }
 
 /* center all images */
