Fixed margins for inline images

--- a/CETONI_Elements_Manual_DE/_static/css/style_override.css
+++ b/CETONI_Elements_Manual_DE/_static/css/style_override.css
@@ -263,6 +263,8 @@ html[data-theme='dark'] .rst-content .kbd {
 .inlineimg img {
   display: inline;
   margin-right: 10px;
+  margin-bottom: 0px;
+  margin-top: 0px;  
 }
 
 .wy-nav-content {
