--- a/CETONI_Elements_Manual_EN/_static/css/style_override.css
+++ b/CETONI_Elements_Manual_EN/_static/css/style_override.css
@@ -227,6 +227,13 @@ html[data-theme='dark'] .rst-content .kbd {
     line-height: 14px;
 }
 
+.step {
+  font-family: 'kievit-bold';
+  font-size: 19px;
+  margin-top: 2em;
+  margin-bottom: 1em;
+}
+
 /* center all images */
 .rst-content img {
   display: block;
@@ -256,6 +263,8 @@ html[data-theme='dark'] .rst-content .kbd {
 .inlineimg img {
   display: inline;
   margin-right: 10px;
+  margin-bottom: 0px;
+  margin-top: 0px;  
 }
 
 .wy-nav-content {
